--- a/ders/korunmus.html
+++ b/ders/korunmus.html
@@ -54,19 +54,51 @@
 <h3 id="harf">Tek harf farkı</h3>
 <p>Sessiz harfleri değiştiren kıraat farklarının nerdeyse tamamı tek harf boyutundadır: Bir harf eksik, bir harf fazla, ya da bir harf yerine başka bir harf okunmuş.</p>
 <ul>
-    <li><a href="./mesahif.html#tablo1">45 kelime</a> için kaydedilmiş imlâ farkları büyük oranda tek harf boyutundadır. Tek harfi aşan imlâ farkı üç kelime:<br>
-* Tevbe <a name="v=9:100&r=tHt">9:100</a> — Mekke mushafı <b>tahtehâ ⇒ min tahtihâ</b><br>
-* Yunus <a name="v=10:22&r=syr">10:22</a> — Şam mushafı <b>yuseyyirukum ⇒ yenşurukum</b><br>
-* Hadid <a name="v=57:24&b=huwa">57:24</a> — Medine ve Şam <b>huvel-ganiy ⇒ el-ganiy</b></li>
-    <li><a href="./kelime.html#tablo1">15 kelime</a> imlâya uygun farklı bir kelime ile okunabilir. Bunlar ikisi hariç tek harf farkıdır:<br>
-* Ankebut <a name="v=29:58&r=bwA">29:58</a> — <b>nubevvienne ⇒ nusviyenne</b><br>
-* Hucurat <a name="v=49:6&r=byn">49:6</a> — <b>fetebeyyenû ⇒ fetesebbetû</b> (üç kere)</li>
     <li><a href="./harf.html#tablo1">260 kelime</a> imlâya uygun farklı bir harfle okunabilir. Biri dışında tamamı tek harf farkıdır:<br>
-* Mucadele <a name="v=58:8&r=njw">58:8</a> — <b>yetenâcevne ⇒ yentecûne</b></li>
+* Mucadele <a name="v=58:8&r=njw">58:8</a> — <b>yetenâcevne ⇒ yentecûne</b>
+    <li><a href="./mesahif.html#tablo1">45 kelime</a> için kaydedilmiş imlâ farkları büyük oranda tek harf boyutundadır. Tek harfi aşan üç kelime:<br>
+* Tevbe <a name="v=9:100&r=tHt">9:100</a> — Mekke mushafı <b>tahtehâ ⇒ min tahtihâ</b><br>
+* Hadid <a name="v=57:24&b=huwa">57:24</a> — Medine ve Şam <b>huvel-ganiy ⇒ el-ganiy</b><br>
+* Yunus <a name="v=10:22&r=syr">10:22</a> — Şam mushafı <b>yuseyyirukum ⇒ yenşurukum</b><br>
+    <li><a href="./kelime.html#tablo1">15 kelime</a> imlâya uygun farklı bir kelime ile okunabilir. Bunlar da ikisi hariç tek harf farkıdır:<br>
+* Ankebut <a name="v=29:58&r=bwA">29:58</a> — <b>nubevvienne ⇒ nusviyenne</b><br>
+* Hucurat <a name="v=49:6&r=byn">49:6</a> — <b>fetebeyyenû ⇒ fetesebbetû</b> (üç kere)<br>
 </ul>
-<p>Tek harfi aşan altı kelime farkı:</p>
-<table id=tablo1></table>
-<p>Pembe işaretli üç varyant imlâya da yansıyor.</p>
+<p>Tek harfi aşan kıraat farklarının tamamı iki harf boyutundadır: iki harf eksik, iki harf fazla, ya da iki harf yerine başka iki harf okunmuş.</p>
+<table id="tablo1"><tbody>
+  <tr><th>Ayet<th>Standart<th>Kıraat<th>Varyant<th>Eksik<th>Fazla
+  <tr>
+    <td><a name="v=58:8&r=njw">58:8</a>
+    <td>yetenâcevne<td>6
+    <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/58/verse/8/variants">yentecûne</a>
+    <td>te nun<td>nun te
+  <tr>
+    <td><a name="v=9:100&r=tHt">9:100</a>
+    <td class="pink">tahtehâ<td>2
+    <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/9/verse/100/variants">min tahtihâ</a>
+    <td><td>mim nun
+  <tr>
+    <td><a name="v=57:24&b=huwa">57:24</a>
+    <td class="pink">huvel-ganiy<td>1 4
+    <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/57/verse/24/variants">el-ganiy</a>
+    <td>he vav<td>
+  <tr>
+    <td><a name="v=10:22&r=syr">10:22</a>
+    <td class="pink">yuseyyirukum<td>4
+    <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/10/verse/22/variants">yenşurukum</a>
+    <td>(syr)<td>(nşr)
+  <tr>
+    <td><a name="v=29:58&r=bwA">29:58</a>
+    <td class="yellow">nubevvienne<td>6 7
+    <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/29/verse/58/variants">nusviyenne</a>
+    <td>(bve)<td>(ṯvy)
+  <tr>
+    <td><a name="v=49:6&r=byn">49:6</a>
+    <td class="yellow">fetebeyyenû<td>6 7
+    <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/49/verse/6/variants">fetesebbetû</a>
+    <td>(byn)<td>(ṯbt)
+</tbody></table>
+<p>Pembe işaretli üç varyant imlâya yansıyor.</p>
 
 <h3 id="sonuc">Sonuç</h3>
 <p><b>Kıraat farkları</b> imamların icadı ya da okuyuş hataları değil, çok sayıda okuyucunun sahabeden rivayetine dayanıyor. Hepsi nesilden nesile hafızalarda saklanmış.
@@ -77,20 +109,3 @@
 <p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Eylul 2024<br>
 </p>
 <script src="init.js"></script>
-<script src="/Kuran/code/common.js"></script>
-<script src="/Kuran/code/model.js"></script>
-<script src="/Kuran/code/utilities.js"></script>
-<script src="variants.js"></script>
-<script>
-const LIST = ['9:100', '10:22', '29:58', '49:6', '57:24', '58:8']
-//['9:100:17', '10:22:2', '29:58:4', '49:6:7', '57:24:9', '58:8:12']
-function filter(x) {
-    if (!LIST.includes(x.cv)) return true
-    let t = x.cv+':'+x.num
-    if (t == '57:24:4') return true
-    console.log(t); return false
-}
-function callLater() {
-    //do nothing
-}
-</script>
