--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -13,10 +13,10 @@
 
 <p>Kuran-ı Kerim'in bir tek metin olmadığı, çok sayıda kelimenin farklı okunuşları olduğu iyi bilinen bir hakikattır. Bu farkların esas olarak iki sebebi var:</p>
 <ul>
-    <li>Lehçe ve şive farkları ile okumaya izin verilmiştir, ses yönünden zenginlik sağlar. 93 numaralı sureye "duhâ" yerine "duhê" ya da "duhiy" demek gibi.</li>
-    <li>Farklar anlamı değiştiriyorsa, iki anlam da doğrudur, anlam yönünden zenginlik sağlar. Fatiha 4. ayet, "melik" ve "mâlik" anlamlarını birlikte taşır.</li>
+    <li>Lehçe ve şive farkları ile okumaya izin verilmiştir, ses yönünden zenginlik sağlar. Mesela "duhâ" suresinde "duhê" ya da "duhiy" demek gibi.</li>
+    <li>Farklar anlamı değiştiriyorsa, iki anlam da doğrudur, anlam yönünden zenginlik sağlar. Mesela Fatiha 4. ayet, "melik" ve "mâlik" anlamlarını birlikte taşır.</li>
 </ul>
-<p>Kıraat konusunu anlamayan bazı şarkiyatçılar, anlam farklarına yol açan okuyuşları tahrif olarak görüyorlar. İslam alimleri ise, "bunlar münzeldir, vahiyle gelmiştir, Efendimiz (SAS) bazen onu bazen bunu okumuştur" diyor. Hakikaten, sahabe "melik" ve "mâlik" kelimelerinin anlam farkını kaçırmış olamaz! İkisi de tevatür derecesinde biliniyor, o halde elbette iki anlam birlikte geçerlidir.</p>
+<p>Bazı şarkiyatçılar, anlam farklarına yol açan okuyuşları tahrif olarak göstermeye çalışıyorlar. İslam alimleri ise, "bunlar münzeldir, vahiyle gelmiştir, Efendimiz (SAS) bazen onu bazen bunu okumuştur" diyor. Hakikaten, sahabe "melik" ve "mâlik" kelimelerinin anlam farkını kaçırmış olamaz! İkisi de tevatür derecesinde biliniyor, o halde elbette iki anlam birlikte geçerlidir.</p>
 <p>Lakin, kimse kendine göre bir kıraat uyduramaz. Farklı kıraatler çok sayıdadır, isnad zinciri ile sahabeye kadar uzanır. Bir kıraatin geçerli olması için hem sözlü hem yazılı delil aranır: Sağlam bir isnad zinciri ve yazılı mushaflardan birine uygunluk. "Şu kelime böyle de okunabilir" diyenlerin yolu bu iki kural ile kapalıdır.</p>
 <p><i>Corpus Coranicum</i> -- 2007'de açılmış kapsamlı bir web sitesi, halen gelişmeye devam ediyor. Kıraat farklarını bu siteden aldığım birkaç örnek üstünde görelim.</p>
 <p>Bu sayfadaki her örnekte koyu renkle gösterilen, Ebû Amr ed-Dânî'nin <i>et-Teysīr</i> adlı eseri ana kaynak. Hicretten 400 yıl sonra yazılmış bu kitabı Altıkulaç da referans olarak kullanıyor, kıraat ilminde sağlam bir eser olduğunu biliyoruz. Lakin, sitede bundan başka çok sayıda kaynak kullanılmış, onların güvenilirliği hakkında bir bilgim yok. Bu nedenle, sağlam olduğunu bildiğim bir tek kaynak kullanıyorum. </p>
@@ -29,14 +29,18 @@
 6 Hamza      Kûfe
 7 el-Kisā'ī  Kûfe
 </pre>
-<p>Bu sayfadaki örnekleri, beş grupta topladım:</p>
+<p>Kıraat farkı örneklerini beş grupta topladım:</p>
 <ol>
     <li>Telaffuz farkları -- anlam değişmez
-    <li><a href="./hareke.html">Hareke farkları</a> -- harfler aynı, 850 kelime
-    <li><a href="./harf.html">Harf farkları</a> -- kök ve imlâ aynı, 260 kelime
-    <li><a href="./kelime.html">Farklı kök</a> (<span class=yellow>sarı</span>) -- imlâ aynı, 15 kelime
-    <li><a href="./mesahif.html">Farklı imlâ</a> (<span class=pink>pembe</span>) -- 45 kelime
+    <li><a href="#hareke">Hareke farkları</a> -- harfler aynı, 850 kelime
+    <li><a href="#harf">Harf farkları</a> -- kök ve imlâ aynı, 260 kelime
+    <li><a href="#kelime">Farklı kök</a> (<span class=yellow>sarı</span>) -- imlâ aynı, 15 kelime
+    <li><a href="#imla">Farklı imlâ</a> (<span class=pink>pembe</span>) -- 45 kelime
 </ol>
+
+<iframe 
+style="width: clamp(400px, 100%, 560px); aspect-ratio: 16/9;"
+src="https://www.youtube.com/embed/hy6eG30mn6o?si=bl2SM5Pv5LeNfnbe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <p>Aşağıdaki her örnekte ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımında gösterilir. Kelimenin okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır. Sarı çizginin altında günümüzde standart olan Asım/Hafs rivayetini, üstünde de farklı okuyuşları görebilirsiniz.
 </p>
@@ -53,7 +57,7 @@
         <img src="img/Fetih 10.png">
     Kitabımızda 146 kere geçen "‘aleyhi" kelimesi yalnız bu ayette ve sadece Hafs rivayetinde "u" ile okunur. Diğer bütün kıraat rivayetlerinde "i" sesi değişmez. Buna karşılık, 138 ayette geçen "‘aleyhim" kelimesinin daha kalın okunuşları var: "‘aleyhum" ve "‘aleyhumû" gibi... </p>
     
-<h3>2. <a href="./hareke.html#tablo1">Hareke farkları</a></h3>
+<h3 id="hareke">2. <a href="./hareke.html">Hareke farkları</a></h3>
 <p>Anlamı değiştirebilen bu farklarda kelime aynı, sadece seslendirmesi farklı.</p>
 <p>Maide <a name="v=5:6&r=rjl">5:6</a> &mdash;
     <b>erculekum</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/5/verse/6/variants" target=Kuran>erculikum</a> &emsp; ('ǧ' = cim)
@@ -68,37 +72,37 @@
     <a name="v=38:13&b=lo_#ayokapi">38:13</a> ayetinde 
     kelimeyi <b>leyke</b> şeklinde okumuş. Demek "Leyke" diye bir yer ismi var.
 </p> -->
-<p>Saff <a name="v=61:14">61:14</a> &mdash;
+<p>Saff <a name="v=61:14&r=nSr">61:14</a> &mdash;
     <b>ensârallâh</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/61/verse/14/variants" target=Kuran>ensâran lillâh</a>
     <img src="img/Saff 14.png">
     İki farklı okuyuş Resm-i Osmani'de aynı yazılıyor. İki kelimenin arasındaki elifin hangi kelimede olduğu belirsiz.
 </p>
-<p>Mumtahine <a name="v=60:3">60:3</a> &mdash;
+<p>Mumtahine <a name="v=60:3&r=fSl">60:3</a> &mdash;
     <b>yafsilu</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/60/verse/3/variants" target=Kuran>yufsalu | yufassalu | yufassilu</a>
     <img src="img/Mumtahine 3.png">
     Fiil çekiminden kaynaklanan üç farklı okuyuş anlamı zenginleştiriyor: açıklar, açıklanır, ayırır, ayrılır -- hepsi doğru.
 </p>
 
-<h3>3. <a href="./harf.html#tablo1">Harf farkları</a></h3>
+<h3 id="harf">3. <a href="./harf.html">Harf farkları</a></h3>
 <p>Harf farklarının çoğu fiillerle ilgili. Fiilin hangi bâbda (kip) kullanıldığı, etken veya edilgenliği, hangi şahıs olduğu gibi hususlarda harf ya da hareke farkları kaydedilmiştir.</p>
 <p>Hicr <a name="v=15:8&r=nzl">15:8</a> &mdash;
     <b>nunezzilu</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/15/verse/8/variants" target=Kuran>tenezzelu | tunezzelu</a>
     <img src="img/Hicr 8.png">
-    Kûfe imamları bu ayeti "melekleri hakkıyla indiririz" mealinde okurken, diğerleri "melekler hakkıyla iner" diyor. Söz farklı ama taşıdığı anlam aynı.
+    Kûfe imamları bu ayeti "melekleri indiririz" mealinde okurken, diğerleri "melekler inerler" diyor. Söz farklı ama taşıdığı anlam aynı.
 </p>
-<p>Neml <a name="v=27:81">27:81</a> &mdash;
+<p>Neml <a name="v=27:81&r=hdy&r=Emy">27:81</a> &mdash;
     <b>bihâdil-'umyi</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/27/verse/81/variants" target=Kuran>tehdil-'umâ</a>
     <img src="img/Neml 81.png">
-    İki farklı okuyuş Resm-i Osmani'de aynı yazılıyor, anlam pek değişmiyor: "Körlere hidayet veremezsin!"
+    İki farklı okuyuş Resm-i Osmani'de aynı yazılıyor, anlam değişmiyor: "Körlere hidayet veremezsin!"
 </p>
-<p>Mucadele <a name="v=58:8">58:8</a> &mdash;
+<p>Mucadele <a name="v=58:8&r=njw">58:8</a> &mdash;
     <b>yetenâcevne</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/58/verse/8/variants" target=Kuran>yentecûne</a>
     <img src="img/Mucadele 8.png">
     İki harfin (tê ve nun) yer değiştirebildiği tek örnek bu. Anlam yine çok farklı değil.
 </p>
 
-<h3>4. <a href="./kelime.html#tablo1">Farklı kök, aynı imlâ</a></h3>
-<p>Az sayıda bazı örneklerde, farklı anlam taşıyan kelimelerin yazılışı aynı olabiliyor. Bunların hepsinde iki anlam birlikte geçerli: Hem o kelime, hem bu kelime anlamı zenginleştiriyor. Biri diğerinden "daha doğru" denemediği için her ikisi de hafızalarda korunmuş, lakin Osmânî mushaflarda aynı şekilde resmedilmiş.</p>
+<h3 id="kelime">4. <a href="./kelime.html#tablo1">Farklı kök, aynı imlâ</a></h3>
+<p>14 ayette, farklı anlam taşıyan iki kelimenin yazılışı aynı olabiliyor. Bunların hepsinde iki anlam birlikte geçerli: Hem o kelime, hem bu kelime anlamı zenginleştiriyor. Biri diğerinden "daha doğru" denemediği için her ikisi de hafızalarda korunmuş, lakin Osmânî mushaflarda aynı şekilde resmedilmiş.</p>
 <p>Ankebut <a name="v=29:58&r=bwA">29:58</a> &mdash;
     <b>lenubevviennehum</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/29/verse/58/variants" target=Kuran>lenusviyennehum</a>
     <img src="img/Ankebut 58.png">
@@ -110,15 +114,15 @@
     Kûfe'nin iki imamı, anlamı çok yakın olan farklı bir kelime ile okumuş. Harflerin noktası olmadığı için imlâ aynı. Aynı kıraat ve imlâ farkı Nisâ <a name="v=4:94&r=byn">4:94</a> ayetinde.
 </p>
 
-<h3>5. <a href="./mesahif.html#tablo1">Farklı imlâ</a></h3>
-<p>Bazı ayetlerin okunuşuyla birlikte yazılışı da değişiyor. Kıraat farklarını yazıya geçirmek için, her mushaf gideceği bölgeye uygun kıraate göre yazılmış. Biri diğerinden "daha doğru" denemediği için, her ikisi de Osmânî mushaflarda "bölgesel fark" olarak kayda geçmiş. Altıkulaç'ın verdiği çizelgede imlâ farklarının hepsini görebilirsiniz. </p>
-<p>Yunus <a target=iqra href="/Kuran/reader.html#v=10:22&r=syr">10:22</a> &mdash;
+<h3 id="imla">5. <a href="./mesahif.html#tablo1">Farklı imlâ</a></h3>
+<p>44 ayette, bir kelimenin yazılışı değişebiliyor: bir ya da iki harf farklı. Kıraat farklarını yazıya geçirmek için, her mushaf gideceği bölgeye uygun kıraate göre yazılmış. Biri diğerinden "daha doğru" denemediği için, her ikisi de Osmânî mushaflarda "bölgesel fark" olarak kayda geçmiş. Altıkulaç'ın verdiği çizelgede imlâ farklarının hepsini görebilirsiniz. </p>
+<p>Yunus <a target=iqra name="v=10:22&r=syr">10:22</a> &mdash;
     <b>yuseyyirukum</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/10/verse/22/variants" target=Kuran>yenşurukum</a> 
     <img src="img/Yunus 22.png">
     Bu ayeti bir kıraat imamı, anlamı çok yakın olan farklı bir kelime ile okumuş. Çoğunluğun seçimi olan se-ye-ra kökü yeryüzünde dolaşmayı, ne-şe-ra kökü iki ise yayılmayı anlatır. Kûfi yazıda fark kolayca görülmüyor. 
 </p>
 
-<h3 id=kaynak>Kaynaklar</h3>
+<h3 id="kaynak">Kaynaklar</h3>
 <p>Hicretten 3 asır sonra 900'lü yıllarda, Abbasi İslam devletinin merkezi olan Bağdat'ta Kurân'ın farklı okunuşları hakkında çok önemli bir tasnif çalışması yapıldı: İbn Mücâhid, belirli beş merkezden (Medine, Mekke, Basra, Şam, Kûfe) seçtiği yedi imamın kıraatini ilk defa bir araya getirerek <b>Kitâbus-Sebʿa fil-ḳırâʾât</b> (Yedi Kıraat) adlı eserini yazdı. Bundan bir asır sonra Endülüs'te Ebû ʿAmr ed-Dânî, <b>et-Teysīr</b> isimli meşhur kitabında söz konusu yedi kıraati kolayca takip edilir bir hale getirdi. </p>
 <p>1930 senesinde bu eser, Pretzl isimli Alman şarkiyatçı tarafından İstanbul'da tekrar yayınladı. Yaklaşık bir asır sonra da, Hollanda'lı M van Putten aynı kitabı İngilizce'ye çevirdi ve ön bilgiler ekleyerek genel kullanıma sundu. Aşağıdaki tablo Putten'in bu kıymetli çalışmasından süzülmüştür, <a target=Kuran href="https://okuyun.github.io/Kuran/guideQ.html#tesekkur">teşekkür ederiz</a>.</p>
 
