--- a/ders/korunmus.html
+++ b/ders/korunmus.html
@@ -52,7 +52,7 @@
 </p>
 
 <h3 id="harf">Tek harf farkı</h3>
-<p>Sessiz harfleri değiştiren kıraat farklarının nerdeyse tamamı tek harf boyutundadır: Bir harf eksik, bir harf fazla, ya da bir harf yerine başka bir harf okunmuş.</p>
+<p>Sessiz harfleri değişebilen kıraat farklarının sayısı yaklaşık 320 kelime. Bunların nerdeyse tamamı tek harf boyutundadır: Bir harf eksik, bir harf fazla, ya da bir harf yerine başka bir harf okunmuş.</p>
 <ul>
     <li><a href="./harf.html#tablo1">260 kelime</a> imlâya uygun farklı bir harfle okunabilir. Biri dışında tamamı tek harf farkıdır:<br>
 * Mucadele <a name="v=58:8&r=njw">58:8</a> — <b>yetenâcevne ⇒ yentecûne</b>
