--- a/ders/list.html
+++ b/ders/list.html
@@ -34,6 +34,7 @@
     <li><a href="./kelime.html">Farklı kök</a> (<span class=yellow>sarı</span>)
     <li><a href="./mesahif.html">Farklı imlâ</a> (<span class=pink>pembe</span>)
 </ol>
+<p><a href="korunmus.html#harf">Korunmuş unsurlar</a></p>
 <br>
 <p><i>You may send questions and corrections to</i> &lt;okuyun5@gmail.com&gt;</p>
 <p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Ocak 2025
