--- a/ders/harf.html
+++ b/ders/harf.html
@@ -33,7 +33,7 @@
   İşaretsiz satırlar tek harf farkı olan 210&nbsp;ayette&nbsp;260&nbsp;kelime <br>
   <span class=yellow>sarı işaretli</span> satırlar, kök farkı olan 14&nbsp;ayette&nbsp;15&nbsp;kelime <br>
   <span class=pink>pembe işaretli</span> satırlar, imlâ farkı olan 44&nbsp;ayette&nbsp;45&nbsp;kelime <br>
-  Toplam 270&nbsp;ayette&nbsp;320&nbsp;kelime
+  Toplam yaklaşık 270&nbsp;ayette&nbsp;320&nbsp;kelime
 </blockquote>
 <p>Kıyaslanan kıraat imamı: <select id=qari></select></p>
 <br>
