--- a/ders/kadime.html
+++ b/ders/kadime.html
@@ -41,6 +41,7 @@
     <li><a target=Kuran 
         href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRtPbSgwk-JFLFIt8ekNucywQ-Wbnho9u72jT7nH6Lm8hEOl-g4mqCZ81jYdOOxnUqpvdwco7QkIKbI/pubhtml?gid=0&single=true">İmlâ farkları tablosu</a>
     </li>
+    <li><a href="variants.html">Variant readings</a>
 </ul>
 </div>
 <div class=gap> </div>
