--- a/ders/mesahif.html
+++ b/ders/mesahif.html
@@ -128,7 +128,7 @@ const DATA1 =
 23:112	qwl	MCBS		 elif	qâle	qâle	pink
 23:114	qwl	MCBS		 elif	qâle	qâle	pink
 25:25	nzl	C		 nun	venuzzile	venunzilu
-26:217	wkl	M S	ve	fe	vetevekkel	fetevekkel
+26:217	wkl	M S	vav	fe	vetevekkel	fetevekkel
 27:21	Aty	C		 nun	ye-tiyenniy	ye-tiyenneniy
 28:37	qwl	C	vav		veqâle	qâle
 36:35	Eml	K	he 		'amilethu	'amilet
@@ -144,7 +144,7 @@ const DATA1 =
 55:78	jll	S	ye	vav	zil-celâli	zul-celâli
 57:10	kll	S	elif 		vekullen	vekullun
 57:24	gny	M S	<b>huve</b> 		huvel-ganiy	el-ganiy
-91:15	xwf	M S	ve	fe	velâ	felâ`
+91:15	xwf	M S	vav	fe	velâ	felâ`
 function makeTable() {
   function line(str, i) {
     let [verse, root, city, minus, plus, w1, w2, col] = str.split('\t')
