--- a/ders/variants.html
+++ b/ders/variants.html
@@ -14,26 +14,27 @@
 <p>The Quran is well-known for its rich oral tradition and the diversity of its recitations, known as <i>qira'at</i>. The variant readings have been a subject of extensive study, reflecting both linguistic nuances and the depth of the Quranic text. The Quran is not a single text, but rather it is multi-faceted and contains numerous words with different readings. These differences arise primarily for two main reasons:</p>
 <ul>
     <li><b>Phonetic variations</b>: Different readings are permitted to accommodate variations in various dialects of Arabic, enriching the oral recitation of the Quran. For example, in Surah Ad-Duha, some readers pronounce the word as "ḍuḥā", while others read it as "ḍuḥæ" or "ḍuḥē".</li>
-    <li><b>Semantic richness</b>: When differences in reading affect meaning, both interpretations are considered correct, adding depth to the Quranic message. For instance, in Surah al-Fatiha (1:4), the word is readable both as "malik" (king) and "mālik" (owner), conveying complementary aspects of the divine authority.</li>
+    <li><b>Semantic richness</b>: When differences in reading affect meaning, both interpretations are considered correct, adding depth to the Quranic message. For instance, a word in Surah al-Fatiha (Q1:4) is readable both as "malik" (king) and "mālik" (owner), conveying complementary aspects of the divine authority.</li>
 </ul>
-<br>
-<h3>Variants in Iqra software</h3>
-<p>The word "mālik" mentioned above is shown in color in Iqra, indicating possibility of a variant reading:</p>
+
+<h3>Variants in <i>Iqra</i> software</h3>
+<p>The word "mālik" (Q1:4) mentioned above is shown in color in <i>Iqra</i>, indicating the existence of a variant reading:</p>
 <p><img width="377" src="./img/Fatihah 4.jpg"></p>
-<p>The standard reading and the variants are depicted in the panel: Five readers used here a short "a", and two read the same word with a long "ā".</p>
+<p>The standard reading and its variant are depicted in the panel shown above. Five readers used here a short "a", and two readers read the same word with a long "ā".</p>
 
 <h3>Number of variants</h3>
-<p>Close to 1200 words are marked in Iqra as having a variant reading. About 73% of these variants are related to the vowels, consonants do not change. In 320 words, consonants are allowed to change, and almost all are single-letter variations. 6 words may have a two-letter variation, and there are no variants with more than two letters.</p>
-<p><a href="korunmus.html#harf">6 words whith a two-letter variation</a>
+<p>Close to 1200 words are marked in <i>Iqra</i> as having a variant reading. About 3/4 of these variants are related to the vowels only, consonants do not change. In the remaining 320 words, consonants are allowed to change, and almost all are single-letter variations. Only 6 words may have a two-letter variation, and there are no variants with more than two letters.</p>
+<p><a href="korunmus.html#harf">List of words with two-letter variation</a>
 <p><a href="list.html">Complete list of the variants</a></p>
 <p>The numbers clearly refute both of the following claims:</p>
-<p>• <b>Claim by some Muslims</b>: <i>"Variant readings are merely differences in regional pronunciation."</i> This is incorrect. While phonetic variations constitue the majority, approximately 1,000 words (including repetitions) exhibit slight differences in meaning across various readings.</p>
-<p>• <b>Claim by some non-Muslims</b>: <i>"There are numerous instances of omitted and inserted words, even entire verses."</i> In reality, within the valid readings, both verse order and word order remain fixed. The only cases of omission or addition involve a two-letter word (min) and the removal of another two-letter word (huwa), as noted in the list of two-letter variations above. There is no instance of verse order or word order being altered.</p>
+<p>• <b>Claim by some Muslims</b>: <i>"Variant readings are merely differences in regional pronunciation."</i> This is incorrect. While phonetic variations constitue the majority, at least 1,000 words (including repetitions) exhibit slight differences in meaning across various readings.</p>
+<p>• <b>Claim by some non-Muslims</b>: <i>"There are numerous instances of omitted and inserted words, even entire verses."</i> In reality, within the domain of <i>valid readings</i>, both verse order and word order remain fixed. The only case of word addition involves a two-letter word (<b>min</b>) and the single instance of removal is another two-letter word (<b>huwa</b>), as noted in the list of two-letter variations above. There is no instance of verse order or word order being altered within <i>valid readings</i>.</p>
 <br>
-<h2>Classification and examples</h2>
-<p>Some orientalists have attempted to portray the variations as textual corruption. However, Islamic scholars assert that these readings were divinely revealed and that the Prophet Muhammad recited both at different times. It is inconceivable that the companions, who meticulously preserved the Quran, would have overlooked the difference between "Malik" and "Mâlik". Since both readings have been transmitted through mass transmission (<i>tawātur</i>), both meanings are equally valid and part of the Quranic revelation.</p>
-<p>There are only a small number of acceptable recitations that go all the way back to the companions with a chain of narration. For a recitation to be valid, both verbal and written evidence is required: a solid chain of narration and conformity with one of the written mushafs. Anyone who claims "That word can also be read like this" is bound with the two rules.</p>
-<p>Al-Dānī described the seven canonical readings in his book <b>al-Taysīr</b>. These readers (called <i>qâri</i>) are given below, along with the region they lived and the hijri year of death.
+
+<h2 id="sample">Classification and examples</h2>
+<p>Some orientalists have attempted to portray the variations as textual corruption. However, Islamic scholars assert that these readings were divinely revealed and that the Prophet recited both at different times. It is inconceivable that the companions, who meticulously preserved the Quran, would have overlooked the difference between "malik" and "mâlik". Since both readings have been conveyed through mass transmission (<i>tawātur</i>), both meanings are equally valid and part of the Quranic revelation.</p>
+<p>There are only a small number of valid recitations that go all the way back to the companions with a chain of narration (<i>isnâd</i>). For a recitation to be valid, both verbal and written evidence is required: a solid chain of narration and conformity with one of the written codices (<i>mushaf</i>). Anyone who claims "That word can also be read like this" is bound by the two rules: The claimer must have valid <i>isnâd</i> and the reading must conform to an accepted <i>mushaf</i>.</p>
+<p>Al-Dānī described seven canonical recitations in his book <b>al-Taysīr</b>. Each recitation is associated with a region and a reader representing the variant reading. The seven readers (called <i>qâri</i>) are given below, along with the region they lived and the hijri year of death.
 <pre>  Region -- Reader  (death)
 1 Medina -- Nāfi`     (169)
 2 Mecca  -- Ibn Kaṯīr (120)
@@ -43,43 +44,45 @@
 6 Kufa   -- Ḥamzah    (156)
 7 Kufa   -- al-Kisāī  (189)
 </pre>
-<p>Variant readings can be classified into five groups:</p>
+<p>Variant readings can be classified into five groups. You will find below for each group, a list of words, approximate number, and a sample word from the list:</p>
 <ol>
-<li>Pronunciation variants -- the same meaning
-<li><a href="#hareke">Vowelization variants</a> -- the same letters, 870 words
-<li><a href="#harf">Consonnantal variants</a> -- the same root, 260 words
-<li><a href="#kelime">Different root</a> (<span class=yellow>yellow</span>) -- the same spelling, 15 words
-<li><a href="#imla">Different spelling</a> (<span class=pink>pink</span>) -- 45 words
+<li>Pronunciation variants -- not counted
+<li><a href="hareke.html">Vowelization variants</a> -- 870 words
+<li><a href="harf.html">Consonantal variants</a> -- 260 words
+<li><a href="kelime.html#tablo1">Different root</a> 
+    (<span class=yellow>yellow</span>) -- 15 words
+<li><a href="mesahif.html#tablo1">Different spelling</a> 
+    (<span class=pink>pink</span>) -- 45 words
 </ol>
 
-<p>In each example below, if you click on the verse number, the verse will be displayed in the <b>Iqra</b> software. When you click on the word, variant readings of the verse are opened on the <i>Corpus Coranicum</i> website. Below the yellow line you can see the standard Asim/Hafs narration, and above the line the accepted variant readings are shown.
+<p>In each example below, if you click on the verse number, the verse will be displayed in the <i>Iqra</i> software. When you click on the word, variant readings of the verse are opened on the <i>Corpus Coranicum</i> website. Below the yellow line you can see the standard Asim/Hafs narration, and above the line the accepted variant readings are shown.
 </p>
 
 <h3>1. Pronunciation variants</h3>
-<p>In most of the variant readings, the letters remain the same, only the pronunciation is different: the spelling and meaning of the word do not change. Since their number is quite large, only a small part of this group is displayed in the Iqra software.</p>
+<p>In most of the variant readings, the letters remain the same, only the pronunciation is different: the spelling and meaning of the word do not change. Since their number is quite large, only a small part of this group is displayed in the <i>Iqra</i> software.</p>
 <p>Nāziʿāt <a name="v=79:15&b=muwsaY%60^">79:15</a> &mdash;
 <b>Mūsā</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/79/verse/15/variants" target=Kuran>Mūsæ | Mūsē</a>
     <img src="img/Naziat 15.png">
     In this verse, the word "Mūsā" readable in three different ways, depending on the local accent. There are many similar examples: "hudâ", "hawâ", "tajallâ" and similar words are written with the dotless "ya"  instead of the alif, to allow for different readings. Similarly, there are qâris who read the words "nâr" and "kâfirûn" as "niyr" and "kiyfirûn"! At first hearing, they sound very different, but different accents really add richness to the sound.
 </p>
 
-<h3 id="hareke">2. <a href="./hareke.html">Vowelization variants</a></h3>
-<p>In this category, the word remains the same, only the pronunciation is different.</p>
+<h3>2. Vowelization variants</h3>
+<p>In this category, the word (consonants) remains the same, only the vowels are different.</p>
 <p>Māidah <a name="v=5:6&r=rjl">5:6</a> &mdash;
     <b>arjulakum</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/5/verse/6/variants" target=Kuran>arjulikum</a>
     <img src="img/Maide 6.png">
-    In this example, the meaning really gets richer: According to half of the readers, it is necessary to wash the feet, and according to the others, it is necessary to wipe the feet. There are interpretations that include both meanings. We know that the companions washed the feet most of the time and sometimes wiped the feet.
+    In this example, the meaning really gets richer: According to half of the readers, it is necessary to wash the feet, and according to the others, it is sufficient to wipe the feet. There are interpretations that include both meanings. We know that the companions washed the feet most of the time and sometimes wiped them.
 </p>
 
-<h3 id="harf">3. <a href="./harf.html">Consonnantal variants</a></h3>
-<p>Most of the consonant differences are related to verbs. Differences in letters or vowels have been recorded in matters such as the subject (mood) of the verb, whether it is active or passive, and which person it is.</p>
+<h3>3. Consonantal variants</h3>
+<p>Most of the consonant differences are related to verbs. Differences have been recorded in matters such as the subject, mood, tense of the verb, and whether it is passive.</p>
 <p>Hijr <a name="v=15:8&r=nzl">15:8</a> &mdash;
     <b>nunazzilu</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/15/verse/8/variants" target=Kuran>tanazzalu | tunazzalu</a>
     <img src="img/Hicr 8.png">
-    While the readers of Kufa read this verse as meaning "we send down the angels", others say "the angels descend". The words are different but the meaning is the same.
+    While the readers of Kufa read this verse as meaning "we send down" the angels, others say "the angels descend." The mood is different but the net meaning is the same.
 </p>
 
-<h3 id="kelime">4. <a href="./kelime.html#tablo1">Different root</a></h3>
+<h3>4. Different root</h3>
 <p>In 14 verses, two words with different meanings have the same spelling. Both meanings are valid together and they enrich the meaning. Since one is not considered "more correct" than the other, both are preserved in memory, but are depicted in the same way in the Uthmani mushafs.</p>
 <p>ʿAnkabūt <a name="v=29:58&r=bwA">29:58</a> &mdash;
     <b>nubawwiʾanna</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/29/verse/58/variants" target=Kuran>nuṯwiyanna</a>
@@ -87,17 +90,20 @@
     The two words sound very different, but without the dots, the spelling in Kufic script does not change. The meaning is also very close: To settle in a place is to make that place your home.
 </p>
 
-<h3 id="imla">5. <a href="./mesahif.html#tablo1">Different spelling</a></h3>
-<p>In 44 verses, the spelling of a word can change: one or two letters are different. In order to record the differences in reading, each mushaf was written according to the reading appropriate to the region it was going to. Since one was not considered "more correct" than the other, both were recorded as "regional differences" in the Uthmani mushafs. You can see all the spelling differences in the table given by Altıkulaç. </p>
+<h3>5. Different spelling</h3>
+<p>In 44 verses, the spelling of a word can change: one or two letters are different. In order to record the differences in reading, each mushaf was written according to the reading appropriate to the region it was going to. Since one was not considered "more correct" than the other, both were recorded as "regional differences" in the Uthmani mushafs.</p>
 <p>Yūnus <a target=iqra name="v=10:22&r=syr">10:22</a> &mdash;
     <b>yusayyirukum</b> ⇒ <a href="https://corpuscoranicum.de/en/verse-navigator/sura/10/verse/22/variants" target=Kuran>yanšurukum</a> 
     <img src="img/Yunus 22.png">
     Ibn ʿĀmir alone read this verse with a different word that is very similar in meaning. The root sin-ya-ra, which is the choice of the majority, means "to roam on the earth", while the root nun-šin-ra means "to spread". The difference is not easily seen in Kufic script.
 </p>
 
-<h3 id="kaynak">Sources</h3>
+<h3 id="source">Sources</h3>
 <p>Three centuries after the Hijra, in the 900s, an important classification was carried out in Baghdad, the center of the Abbasid Islamic state, regarding variant readings of the Quran: Ibn Mujahid compiled the readings of seven readers chosen from five regions (Medina, Mecca, Basra, Damascus, Kufa) and wrote his work called <b>Kitāb al-Sabʿah fī al-Qirāʾāt</b> (Seven Recitations). A century later, in Andalusia, Abu ʿAmr al-Dani simplified the seven readings in his famous book <b>al-Taysīr</b>. </p>
 <p>In 1930, this work was republished in Istanbul by the German orientalist Otto Pretzl. About a century later, van Putten from Holland translated the same book into English and made it available for general use, adding some preliminary information. The tables found from the links on this page were extracted from van Putten's valuable work.</p>
+
+<h3>Conclusion</h3>
+<p>Institutions and scholars worldwide engage in preserving and teaching these recitations, ensuring the Quran's multifaceted oral heritage remains alive. The variant readings of the Quran exemplify the linguistic richness of the text and the meticulous efforts of generations to preserve its oral and written forms. These variations, far from indicating discrepancies, highlight adaptability of the Quran, offering multiple layers of understanding and reflection.</p>
 
 <br>
 <p><i>You may send questions and corrections to</i> &lt;okuyun5@gmail.com&gt;</p>
