--- a/ders/korunmus.html
+++ b/ders/korunmus.html
@@ -36,7 +36,7 @@
 <blockquote>
     (*) <a name="v=3:195&r=qtl">Âli İmran 195</a> ve <a name="v=9:111&r=qtl">Tevbe 111</a> ayetlerinde, imlâsı aynı olan ardışık iki kelimenin sırası değişebiliyor.
 </blockquote>
-<p>Kelimelerin bitişik yazılmasına bir örnek, iki kelime içeren <i>ebneumme</i> "anamın oğlu" ifadesi. Kitabımızda iki yerde geçen bu ifade birinde ayrı, diğerinde bitişik yazılır. Eski ve yeni bütün mushaflarda bu ayrıntı korunmuştur: A'râf suresinde iki kelime olarak "elif-be-nun" ve "elif-mim", Tâhâ suresinde bitişik "ye-be-nun-vav-mim" şeklinde yazılır.
+<p>Kelimelerin bitişik yazılmasına bir örnek, iki kelime içeren <b>ebneumme</b> "anamın oğlu" ifadesi. Kitabımızda iki yerde geçen bu ifade birinde ayrı, diğerinde bitişik yazılır. Eski ve yeni bütün mushaflarda bu ayrıntı korunmuştur: A'râf suresinde iki kelime olarak "elif-be-nun" ve "elif-mim", Tâhâ suresinde bitişik "ye-be-nun-vav-mim" şeklinde yazılır.
     <img src="/Kitap/KK/yebneumme.png">
     <div class="caption">
         <a name="v=7:150&r=bny&r=Amm">7:150</a> ve <a name="v=20:94&r=bny">20:94</a>
@@ -44,7 +44,7 @@
 </p>
 
 <h3 id="takdim">Takdim-tehir farkı yok</h3>
-<p>İkinci örnek: "Oyun ve eğlence" anlamına gelen <i>la'ibun velehvun</i> kelimeleri dört ayette bu sırada, iki ayette "eğlence ve oyun" şeklinde ters sırada geçiyor. Ters söylemekle anlam değişir mi? Elbette hayır. Ama hiçbir kıraat imamı bu altı ayeti, standart kıraatten farklı okumamış. Yani, anlamı değiştirmeyen ve hataya açık görünen bu kelimelerin sırası bile korunmuş.
+<p>İkinci örnek: "Oyun ve eğlence" anlamına gelen <b>la'ibun velehvun</b> kelimeleri dört ayette bu sırada, iki ayette "eğlence ve oyun" şeklinde ters sırada geçiyor. Ters söylemekle anlam değişir mi? Elbette hayır. Ama hiçbir kıraat imamı bu altı ayeti, standart kıraatten farklı okumamış. Yani, anlamı değiştirmeyen ve hataya açık görünen bu kelimelerin sırası bile korunmuş.
     <img src="/Kitap/KK/ittehazu_dinehum.png">
     <div class="caption">
         <a name="v=6:70&r=lEb&r=lhw">6:70</a> ve <a name="v=7:51&r=lEb&r=lhw">7:51</a>
@@ -86,17 +86,17 @@
     <td><a name="v=10:22&r=syr">10:22</a>
     <td class="pink">yuseyyirukum<td>4
     <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/10/verse/22/variants">yenşurukum</a>
-    <td>(syr)<td>(nşr)
+    <td class="yellow">(syr)<td>(nşr)
   <tr>
     <td><a name="v=29:58&r=bwA">29:58</a>
-    <td class="yellow">nubevvienne<td>6 7
+    <td>nubevvienne<td>6 7
     <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/29/verse/58/variants">nusviyenne</a>
-    <td>(bve)<td>(ṯvy)
+    <td class="yellow">(bve)<td>(ṯvy)
   <tr>
-    <td><a name="v=49:6&r=byn">49:6</a>
-    <td class="yellow">fetebeyyenû<td>6 7
+    <td><a name="v=4:94&r=byn">4:94</a><br><a name="v=49:6&r=byn">49:6</a>
+    <td>fetebeyyenû<td>6 7
     <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/49/verse/6/variants">fetesebbetû</a>
-    <td>(byn)<td>(ṯbt)
+    <td class="yellow">(byn)<td>(ṯbt)
 </tbody></table>
 <p>Pembe işaretli üç varyant imlâya yansıyor.</p>
 
