--- a/ders/variants.html
+++ b/ders/variants.html
@@ -11,7 +11,7 @@
 
 <h2>Variant readings in the Quran &emsp; <button><a href="kadime.html">◀</a></button></h2>
 
-<p>The Quran is well-known for its rich oral tradition and the diversity of its recitations, known as <i>qira'at</i>. The variant readings have been a subject of extensive study, reflecting both linguistic nuances and the depth of the Quranic text. The Quran is not a single text, but rather it is multi-faceted and contains numerous words with different readings. These differences arise primarily for two main reasons:</p>
+<p>The Quran is well-known for its rich oral tradition and the diversity of its recitations, known as <i>qira'at</i>. The variant readings have been a subject of extensive study, reflecting both linguistic nuances and the depth of the Quranic text. The Quran is not a single text, but rather it is multifaceted and contains numerous words with different readings. These differences arise primarily for two main reasons:</p>
 <ul>
     <li><b>Phonetic variations</b>: Different readings are permitted to accommodate variations in various dialects of Arabic, enriching the oral recitation of the Quran. For example, in Surah Ad-Duha, some readers pronounce the word as "ḍuḥā", while others read it as "ḍuḥæ" or "ḍuḥē".</li>
     <li><b>Semantic richness</b>: When differences in reading affect meaning, both interpretations are considered correct, adding depth to the Quranic message. For instance, a word in Surah al-Fatiha (Q1:4) is readable both as "malik" (king) and "mālik" (owner), conveying complementary aspects of the divine authority.</li>
@@ -22,13 +22,46 @@
 <p><img width="377" src="./img/Fatihah 4.jpg"></p>
 <p>The standard reading and its variant are depicted in the panel shown above. Five readers used here a short "a", and two readers read the same word with a long "ā".</p>
 
-<h3>Number of variants</h3>
-<p>Close to 1200 words are marked in <i>Iqra</i> as having a variant reading. About 3/4 of these variants are related to the vowels only, consonants do not change. In the remaining 320 words, consonants are allowed to change, and almost all are single-letter variations. Only 6 words may have a two-letter variation, and there are no variants with more than two letters.</p>
-<p><a href="korunmus.html#harf">List of words with two-letter variation</a>
-<p><a href="list.html">Complete list of the variants</a></p>
+<h3 id="number">Number of variants</h3>
+<p>In <i>Iqra</i>, <a href="list.html">nearly 1200 words</a> are marked as having variant readings. About three-quarters of these variations are related to the vowels alone, without any consonant change. In the <a href="harf.html">remaining 320 words</a>, consonantal changes are permitted, but these variations are minimal: almost all involve a single-letter modification, whether through addition, removal, or substitution. </p>
+<p>All differences extending beyond a single letter, the variation is strictly limited to two letters: a couple added, a couple removed, or a couple replaced by two other letters. Notably, no variant reading alters more than two letters, underscoring the controlled nature of these differences. <b>All words</b> with a two-letter variation are shown below:</p>
+<table id="tablo1"><tbody>
+  <tr><th>Verse<th>Standard<th>Reader<th>Variant<th>Remove<th>Add
+  <tr>
+    <td><a name="v=58:8&r=njw">58:8</a>
+    <td>yatanājauna<td>6
+    <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/58/verse/8/variants">yantajūna</a>
+    <td>ta nun<td>nun ta
+  <tr>
+    <td><a name="v=9:100&r=tHt">9:100</a>
+    <td class="pink">taḥtahā<td>2
+    <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/9/verse/100/variants">min taḥtihā</a>
+    <td><td>mim nun
+  <tr>
+    <td><a name="v=57:24&b=huwa">57:24</a>
+    <td class="pink">huwal-ġaniyyu<td>1 4
+    <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/57/verse/24/variants">al-ġaniyyu</a>
+    <td>ha waw<td>
+  <tr>
+    <td><a name="v=10:22&r=syr">10:22</a>
+    <td class="pink">yusayyirukum<td>4
+    <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/10/verse/22/variants">yanšurukum</a>
+    <td class="yellow">(syr)<td>(nšr)
+  <tr>
+    <td><a name="v=29:58&r=bwA">29:58</a>
+    <td>nubawwiʾanna<td>6 7
+    <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/29/verse/58/variants">nuṯwiyanna</a>
+    <td class="yellow">(bwa)<td>(ṯwy)
+  <tr>
+    <td><a name="v=4:94&r=byn">4:94</a><br><a name="v=49:6&r=byn">49:6</a>
+    <td>fa-tabayyanū<td>6 7
+    <td><a target="Kuran" href="https://corpuscoranicum.de/en/verse-navigator/sura/49/verse/6/variants">fa-taṯabbatū</a>
+    <td class="yellow">(byn)<td>(ṯbt)
+</tbody></table>
+<p>Pink and Yellow colors denote <span class=pink>Spelling change</span> and <span class=yellow>Root change</span>, respectively. All of the variant readings are listed in the link before the table.</p>
 <p>The numbers clearly refute both of the following claims:</p>
 <p>• <b>Claim by some Muslims</b>: <i>"Variant readings are merely differences in regional pronunciation."</i> This is incorrect. While phonetic variations constitue the majority, at least 1,000 words (including repetitions) exhibit slight differences in meaning across various readings.</p>
-<p>• <b>Claim by some non-Muslims</b>: <i>"There are numerous instances of omitted and inserted words, even entire verses."</i> In reality, within the domain of <i>valid readings</i>, both verse order and word order remain fixed. The only case of word addition involves a two-letter word (<b>min</b>) and the single instance of removal is another two-letter word (<b>huwa</b>), as noted in the list of two-letter variations above. There is no instance of verse order or word order being altered within <i>valid readings</i>.</p>
+<p>• <b>Claim by some non-Muslims</b>: <i>"There are numerous instances of omitted and inserted words, even entire verses."</i> In reality, within the domain of <i>valid recitations</i>, both verse order and word order remain fixed. The only case of word addition involves a two-letter word (<b>min</b>) and the single instance of removal is another two-letter word (<b>huwa</b>), as noted in the list of two-letter variations above. There is no instance of verse order or word order being altered within <i>valid recitations</i>.</p>
 <br>
 
 <h2 id="sample">Classification and examples</h2>
@@ -104,7 +137,7 @@
 
 <h3>Conclusion</h3>
 <p>Institutions and scholars worldwide engage in preserving and teaching these recitations, ensuring the Quran's multifaceted oral heritage remains alive. The variant readings of the Quran exemplify the linguistic richness of the text and the meticulous efforts of generations to preserve its oral and written forms. These variations, far from indicating discrepancies, highlight adaptability of the Quran, offering multiple layers of understanding and reflection.</p>
-
+<p><a href="list.html">Complete list of the variants</a></p>
 <br>
 <p><i>You may send questions and corrections to</i> &lt;okuyun5@gmail.com&gt;</p>
 <p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Feb 2025<br>
